# Autobook

./: .gitignore  DEVELOPMENT.md  README.md  netlify.toml
autobook/: Dockerfile  FRONTEND_ARCHITECTURE.md  FRONTEND_DEPLOYMENT.md  FRONTEND_REALTIME_UPDATES.md  TEAM_HANDOFF_BEN.md  TEAM_HANDOFF_CHRIS.md  TEAM_HANDOFF_VIVIAN.md  docker-compose.yml  elasticmq.conf  pyproject.toml  readme.md
autobook/a5_artifacts/profiling/: extract_amount_mentions.txt  extract_date_mentions.txt  extract_party_mentions.txt  normalize.txt  normalize_text.txt  summary.md
autobook/backend/: config.py  local_identity.py
autobook/backend/accounting_engine/: tools.py
autobook/backend/api/: main.py
autobook/backend/auth/: deps.py  mock_cognito.py  schemas.py  token_service.py
autobook/backend/cache/: __init__.py
autobook/backend/db/: __init__.py  connection.py  credentials.py
autobook/backend/queues/: __init__.py  redis.py  sqs.py
autobook/backend/reporting/: statements.py
autobook/backend/ripple_through/: __init__.py  chain.py  protocols.py  result.py  tier.py
autobook/backend/schemas/: __init__.py  auth.py  cache_keys.py  clarifications.py  events.py  health.py  ledger.py  llm.py  parse.py  queue_messages.py  statements.py  taxonomy.py
autobook/backend/tests/: test_parse_api.py
autobook/backend/utils/: taxonomy.py
autobook/backend/vectordb/: client.py  collections.py  credentials.py  embeddings.py  init.py  memory.py  payloads.py
autobook/backend/workers/: agent.py  fast_path.py  normalization.py
autobook/docs/: AGENT_SYSTEM_STATUS.md  TRANSACTION_LIFECYCLE.md  mock-cognito-local.md
autobook/frontend/: .env.example  .env.production.live.example  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
autobook/frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css
autobook/infra/scripts/: create-user.sh  wipe-cognito-users.sh  wipe-dev-users.sql
autobook/llm-experiment/: analysis.py  metrics.py  run.py  run_analysis.sh  run_experiment.sh  run_merge_eval.sh  run_present.sh  run_warmup.sh  test_cases.py  variants.py
autobook/llm-experiment/single_agent/: graph.py  prompt.py
autobook/llm-experiment/test-source/: accounting_examples_kor.hwpx  basic_examples.md  hard_examples.md  intermediate_examples.md  거래의 결합관계와 분개_260322.hwp
autobook/llm-experiment/test_cases/: test_cases_basic.py  test_cases_hard.py  test_cases_intermediate.py  test_cases_intermediate_from_hard.py
autobook/llm-experiment/variants/: variants.py
autobook/normalization-experiment/: run.py  test_cases.py
autobook/normalization-experiment/results/: result1.txt  run2.json
autobook/scripts/: print_mock_cognito.py  profile_a5_backend.py
autobook/src/: config.py
autobook/src/api/: main.py
autobook/src/cache/: redis.py
autobook/src/queues/: __init__.py
autobook/tests/: conftest.py  overall-status.md  status.md  strategy.md  test_agent_pipeline.py  test_auth.py  test_auth_routes.py  test_backend_health.py  test_common_ids.py  test_local_identity.py  test_local_identity_extra.py  test_ml_service.py  test_normalize_transactions_job.py  test_precedent_pipeline.py  test_smoke_end_to_end.py  test_transaction_lifecycle.py  workflow.md
autobook/tests/accounting_engine/: status.md  test_rules.py  test_validators.py
autobook/tests/api/: status.md  test_dependencies.py
autobook/tests/auth/: mock_cognito.py  status.md  test_auth_extra.py  test_auth_internals.py  test_deps.py  test_deps_extra.py  test_mock_cognito.py  test_token_extra.py  test_token_service.py
autobook/tests/cache/: status.md  test_redis.py
autobook/tests/db/: conftest.py  status.md  test_connection.py  test_credentials.py
autobook/tests/queues/: status.md  test_init.py  test_redis.py  test_sqs.py
autobook/tests/reporting/: status.md  test_statements.py
autobook/tests/schemas/: status.md
autobook/tests/services/: status.md  test_aws.py
autobook/tests/utils/: status.md
autobook/tests/vectordb/: status.md  test_client.py  test_collections.py  test_embeddings.py  (+1 more)
(+2101 files in other folders)
