[project]
name = "autobook"
version = "0.1.0"
description = "Automated accounting system — 8-service microservice architecture"
requires-python = ">=3.11,<3.13"

# Shared by all 8 services (autobook-base layer)
dependencies = [
    "pydantic>=2.12,<3",
    "pydantic-settings>=2.9,<3",
    "redis>=5.0,<6",
    "sqlalchemy>=2.0,<3",
    "asyncpg>=0.30,<1",
    "boto3>=1.42,<2",
]

# Per-service extras — each Dockerfile target installs its group
[project.optional-dependencies]
accounting = []  # rule-based accounting engine (tax, CoA, validation)
api = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.34,<1",
    "python-multipart>=0.0.18,<1",
    "cognitojwt>=1.4,<2",
]
normalizer = [  # S3 → normalize → write transactions
    "pandas>=3.0,<4",
    "pyarrow>=23.0,<24",
]
ml-inference = [  # SageMaker inference (tier 2)
    "sagemaker>=2.200,<3",
]
agent = [  # LangGraph LLM pipeline (tier 3)
    "langgraph>=0.2,<1",
    "langchain-aws>=0.2,<1",
    "qdrant-client>=1.12,<2",
]
flywheel = [  # caches, RAG indexing, ML retrain triggers
    "qdrant-client>=1.12,<2",
    "sagemaker>=2.200,<3",
]

# Dev-only — never installed in Docker
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
