[project]
name = "autobook"
version = "0.1.0"
description = "Data processing pipeline for automated accounting"
requires-python = ">=3.11,<3.13"
readme = "README.md"

dependencies = [
    "pydantic>=2.12.5,<3",
    "pydantic-settings>=2.0,<3",
    "boto3>=1.42,<2",
    "cryptography>=45.0,<46",
    "redis>=5.0,<6",
    "awslambdaric>=3.0,<4",
    "sqlalchemy>=2.0,<3",
    "psycopg2-binary>=2.9,<3",
]

# Per-service extras — each Dockerfile target installs its group
[project.optional-dependencies]
accounting = []  # rule-based accounting engine (tax, CoA, validation)
api = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.34,<1",
    "python-multipart>=0.0.18,<1",
    "cognitojwt>=1.4,<2",
    "websockets>=12,<14",
]
normalizer = [  # S3 → normalize → write transactions
    "pandas>=3.0,<4",
    "pyarrow>=23.0,<24",
]
ml-inference = [  # SageMaker inference (tier 2) — uses boto3 (pre-installed in Lambda)
]
agent = [  # LangGraph LLM pipeline (tier 3)
    "langgraph>=0.2,<1",
    "langchain-aws>=0.2,<1",
    "qdrant-client>=1.12,<2",
]
flywheel = [  # caches, RAG indexing, ML retrain triggers — uses boto3 for SageMaker
    "qdrant-client>=1.12,<2",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.0",
    "pytest-cov>=6.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider --cov=backend --cov-report=term-missing --cov-report=xml --cov-report=html"

[tool.coverage.run]
branch = true
source = ["backend"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
